<resources>
    <string name="app_name">Guest Sipandu Beradat</string>
    <string name="sipandu_beradat">Sipandu Beradat</string>
    <string name="not_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="identity_type">Identity Type</string>
    <string name="identity_number">Identity Number</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="banjar">Banjar</string>
    <string name="desa_adat">Desa Adat</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="emergency">Emergency</string>
    <string name="first_ilustration">First Ilustration</string>
    <string name="change_full_name">Change Full Name</string>
    <string name="change_password">Change Password</string>
    <string name="change_gender">Change Gender</string>
    <string name="report">Report</string>
    <string name="create_complaint">Create Complaint</string>
    <string name="complaint">Complaint</string>
    <string name="complaint_type">Complaint Type</string>
    <string name="complaint_location">Complaint Location</string>
    <string name="complaint_photo">Complaint Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="status">Status</string>
    <string name="emergency_report">Emergency Report</string>
    <string name="news">News</string>
    <string name="report_history">Report History</string>
    <string name="personal_data">Personal Data</string>
    <string name="address">Address</string>
    <string name="family">Family</string>
    <string name="change">Change</string>
    <string name="category">Category</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country">Country</string>
    <string name="province">Province</string>
    <string name="change_address">Change Address</string>
    <string name="daynight">Day Night</string>
    <string name="username_helper">Input your family username to start search process</string>
    <string name="change_location">Change Location</string>
    <string name="confirm_emergency_report">Are you sure want to create emergency report?</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="add_family">Add Family</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="photo">Photo</string>
    <string name="not_found">Not Found</string>
    <string name="description_not_found">
        Sorry, the profile you are looking for was not found. Please enter a valid username.</string>
    <string name="skip">Skip</string>
    <string name="welcome">Welcome,</string>
    <string name="desc_welcome">Please login first to be able to make a report</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="desc_personal_data">Please fill your personal data correctly</string>
    <string name="desc_profile_picture">Your can add profile picture now or add it later</string>
    <string name="contact">Contact</string>
    <string name="desc_contact">Please complete your contact data</string>
    <string name="home_location">Home Location</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="filter">Filter</string>
    <string name="see_more">See More</string>
    <string name="empty">Empty</string>
    <string name="desc_empty_history">Report history data was not found. Please create a report first</string>
    <string name="reporter">Reporter</string>
    <string name="desc_create_complaint">Please fill in all the columns so your complaint can be processed</string>
    <string name="account_setting">Account Setting</string>
    <string name="desc_user_profile">User Profile Detail</string>
    <string name="desc_user_location">User Location Detail</string>
    <string name="desc_change_password">Change Password</string>
    <string name="desc_family">Your family will be notified when you create a report</string>
    <string name="desc_search_family">Search family by name</string>
    <string name="desc_empty_family">Family data was not found. Please add family first</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="desc_empty_family_request">Family request was not found</string>
    <string name="report_category">Report Category</string>
    <string name="report_type">Report Type</string>
    <string name="reporter_category">Reporter Category</string>
    <string name="krama">Krama</string>
    <string name="wisatawan">Wisatawan</string>
    <string name="rentang_tanggal">Rentang Tanggal</string>
    <string name="awal">Awal</string>
    <string name="akhir">Akhir</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="berangkat">Berangkat</string>
    <string name="invalid">Invalid</string>
    <string name="valid">Valid</string>
    <string name="nyalakan_e_kulkul">Nyalakan E-Kulkul</string>
    <string name="refresh">Refresh</string>
    <string name="desc_empty_handler">Sorry, there\'s no one to handle your report yet</string>
    <string name="desc_photo_proof">Handling proof not yet uploaded by the officer</string>
    <string name="unggah_foto_penanganan">Unggah Foto Penanganan</string>
    <string name="bukti_foto_kosong">Tekan area ini untuk memilih foto bukti penanganan</string>
    <string name="maks_file">Maksimal 5MB</string>
    <string name="deksripsi_unggah_foto_penanganan">Mohon unggah foto sebagai bukti penanganan dari pelaporan yang anda tangani,
        file foto dapat berupa .png, .jpeg, .jpg, atau .gif</string>
    <string name="upload">Upload</string>
    <string name="deskripsi_laporan_kosong">Tidak ditemukan data laporan yang sesuai</string>
    <string name="daftar_e_kulkul">Daftar E-kulkul</string>
    <string name="deskripsi_e_kulkul_kosong">Belum ada E-Kulkul yang terpasang di desa adat</string>
    <string name="verifed">Verified</string>
    <string name="pecalang">Pecalang</string>
    <string name="durasi_e_kulkul">Durasi E-Kulkul</string>
    <string name="deskripsi_durasi_e_kulkul">Atur durasi nyala E-Kulkul dalam satuan menit dengan mengisi kolom berikut</string>
    <string name="minute">Minute</string>
    <string name="admin">Admin</string>
    <string name="maximum_char">Maximum 255 characters</string>
    <string name="road_closure">Road Closure</string>
    <string name="closed_road">Closed Road</string>
    <string name="alternative_road">Alternative Road</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="email">E-mail</string>
    <string name="accommodation">Accommodation</string>
    <string name="otp">One Time Password (OTP)</string>
    <string name="verification">Verification</string>
    <string name="desc_verification">Type the OTP verification code that has been sent to your e-mail</string>
    <string name="resend_code">Resend the code in&#160;</string>
    <string name="resend">Resend</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="desc_empty_notification">There\'s no notification yet</string>
    <string name="desc_empty_news">There\'s nothing happen yet</string>
    <string name="forgot_password_qm">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="desc_email">Enter the email associated with your account</string>
</resources>