<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardElevation="0dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/unggah_foto_penanganan"
            android:textSize="16sp"
            android:textColor="?colorAccent"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/deksripsi_unggah_foto_penanganan" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/empty_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_upload_area"
                android:padding="24dp"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_image_big"
                    android:contentDescription="@string/photo"
                    android:scaleType="centerInside"
                    app:tint="@color/red_700" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bukti_foto_kosong"
                    android:textColor="@color/black"
                    android:gravity="center" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/maks_file"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:gravity="center" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:shapeAppearanceOverlay="@style/SmallRoundedRectangle" />

    </LinearLayout>

    <com.sipanduberadat.guest.components.ProgressButton
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:text="@string/upload" />

</LinearLayout>